trying to fix button now, white space confirmed fixed

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   height: 10%;
   color: white;
   background-color: gray;
+  max-width: 100%;
 }
 
 .img-officer {
